Path&A*/GIMP_PATH/pgimp_error
(gimpenv) am@am-HP-Pavilion-g4-Notebook-PC:~$ pip install pgimp
DEPRECATION: Python 2.7 will reach the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 won't be maintained after that date. A future version of pip will drop support for Python 2.7. More details about Python 2 support in pip, can be found at https://pip.pypa.io/en/latest/development/release-process/#python-2-support
Collecting pgimp
  Using cached https://files.pythonhosted.org/packages/21/66/249107f07f3cec05bf1bc138f32a9d7673addb9be61171c51bf6c7da50fa/pgimp-1.0.0a22.tar.gz
    ERROR: Command errored out with exit status 1:
     command: /home/am/anaconda3/envs/gimpenv/bin/python -c 'import sys, setuptools, tokenize; sys.argv[0] = '"'"'/tmp/pip-install-rKBZpj/pgimp/setup.py'"'"'; __file__='"'"'/tmp/pip-install-rKBZpj/pgimp/setup.py'"'"';f=getattr(tokenize, '"'"'open'"'"', open)(__file__);code=f.read().replace('"'"'\r\n'"'"', '"'"'\n'"'"');f.close();exec(compile(code, __file__, '"'"'exec'"'"'))' egg_info --egg-base pip-egg-info
         cwd: /tmp/pip-install-rKBZpj/pgimp/
    Complete output (8 lines):
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/tmp/pip-install-rKBZpj/pgimp/setup.py", line 10, in <module>
        from pgimp.util import file
      File "pgimp/util/file.py", line 9
        def get_content(file: str) -> str:
                            ^
    SyntaxError: invalid syntax
    ----------------------------------------
ERROR: Command errored out with exit status 1: python setup.py egg_info Check the logs for full command output.
